--- a/src/App.css
+++ b/src/App.css
@@ -80,3 +80,14 @@ button {
   scrollbar-width: none;
 }
 
+@keyframes float {
+  0% {
+    transform: translateY(0) scale(1);
+  }
+  50% {
+    transform: translateY(-20px) scale(1.05);
+  }
+  100% {
+    transform: translateY(0) scale(1);
+  }
+}
